commit 13ae709
Author: hutch <hutch@midwales.net>
Date:   Sat Mar 10 17:55:15 2012 +0000

    added views to imagepicker

handlers/imagepicker_colorbox_handler_field_colorbox.inc
handlers/imagepicker_views_handler_field_avail_roles.inc
handlers/imagepicker_views_handler_field_image_url.inc
handlers/imagepicker_views_handler_filter_avail_roles.inc
handlers/imagepicker_views_handler_filter_group_id.inc
handlers/imagepicker_views_handler_filter_group_name.inc
imagepicker.admin.inc
imagepicker.css
imagepicker.edit.inc
imagepicker.form-elements.inc
imagepicker.functions.inc
imagepicker.group.inc
imagepicker.imagefuncs.inc
imagepicker.info
imagepicker.install
imagepicker.js
imagepicker.module
imagepicker.theme.inc
imagepicker.tpl.php
imagepicker.user.inc
imagepicker_iframe.js
imagepicker_upload.js
imagepicker_upload_link.js
views/README.txt
views/imagepicker.views.inc
views/imagepicker.views_default.inc

commit 8246b79
Author: hutch <hutch@midwales.net>
Date:   Fri Mar 9 11:48:31 2012 +0000

    another DIRECTORY_SEPARATOR fix in theme

CHANGELOG.txt
imagepicker.theme.inc

commit b16028b
Author: hutch <hutch@midwales.net>
Date:   Thu Mar 8 22:33:52 2012 +0000

    added max_scale message in upload form

CHANGELOG.txt
imagepicker.upload.inc

commit 007cc94
Author: hutch <hutch@midwales.net>
Date:   Thu Mar 8 21:56:00 2012 +0000

    fixed DIRECTORY_SEPARATOR bug in url strings

CHANGELOG.txt
imagepicker.module

commit fe69a81
Author: hutch <hutch@midwales.net>
Date:   Tue Mar 6 21:38:07 2012 +0000

    issue 1470672 language hack

CHANGELOG.txt
imagepicker.module

commit c9f8ef6
Author: hutch <hutch@midwales.net>
Date:   Mon Mar 5 00:03:04 2012 +0000

    fixed max_scale in import

imagepicker.import.inc

commit b0d1f92
Author: hutch <hutch@midwales.net>
Date:   Mon Feb 27 20:09:31 2012 +0000

    added max size feature

CHANGELOG.txt
imagepicker.admin.inc
imagepicker.form-elements.inc
imagepicker.functions.inc
imagepicker.upload.inc

commit 61abb4b